--- a/package.json
+++ b/package.json
@@ -3,22 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
+    "axios": "^1.7.9",
+    "framer-motion": "^11.14.4",
     "next": "14.2.16",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "scroll-to-element": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/scroll-to-element": "^2.0.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
