--- a/package.json
+++ b/package.json
@@ -11,14 +11,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.9",
-    "framer-motion": "^11.14.4",
     "next": "14.2.16",
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1",
-    "scroll-to-element": "^2.0.3"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
