--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
+    "recharts": "^2.15.0",
     "redux": "^5.0.1"
   },
   "devDependencies": {
