--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "next": "14.2.16",
     "prop-types": "^15.8.1",
     "react": "^18",
